# scratch_nlp

./: .buildinfo  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Experiments.ipynb  LICENSE  README.md  RESOURCES.md  details.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  src.core.bert.html  src.core.bow.html  src.core.glove.html  src.core.gpt.html  src.core.gru.html  src.core.hmm.html  src.core.html  src.core.lstm.html  src.core.ngram.html  src.core.rnn.html  src.core.seq2seq.html  src.core.tfidf.html  src.core.transformer.html  src.core.word2vec.html  src.html  src.preprocess.html
.github/workflows/: python_package.yml  sphinx.yml
_modules/: index.html
_modules/src/: metrics.html  plot_utils.html  utils.html
_sources/: details.rst.txt  index.rst.txt  src.core.bert.rst.txt  src.core.glove.rst.txt  src.core.hmm.rst.txt  src.core.lstm.rst.txt  src.core.ngram.rst.txt  src.core.rnn.rst.txt  src.core.rst.txt  src.core.word2vec.rst.txt  src.preprocess.rst.txt
configs/: bert.yaml  bow.yaml  glove.yaml  gpt.yaml  gru.yaml  hmm.yaml  lstm.yaml  ngram.yaml  rnn.yaml  seq2seq.yaml  tfidf.yaml  transformer.yaml  word2vec.yaml
docs/: DETAILS.md  conf.py  details.rst  index.rst  requirements.txt  src.core.bow.rst  src.core.gru.rst  src.core.seq2seq.rst  src.core.transformer.rst
sample_data/eng2tel/: english_telugu_data.txt
sample_data/flickr_8k/: captions.txt
sample_data/genius_lyrics/: english_lyrics.csv
src/: config.py  configs.py  main.py  metrics.py  plot_utils.py  utils.py
(+205 files in other folders)
